infra/k8s/media-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-service
  template:
    metadata:
      labels:
        app: media-service
    spec:
      containers:
        - name: media-service
          image: sentrionic/media-service
---
apiVersion: v1
kind: Service
metadata:
  name: media-srv
spec:
  selector:
    app: media-service
  ports:
    - name: media-service
      protocol: TCP
      port: 4000
      targetPort: 4000
