infra/k8s/notification-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: sentrionic/notification-service
---
apiVersion: v1
kind: Service
metadata:
  name: notification-srv
spec:
  selector:
    app: notification-service
  ports:
    - name: notification-service
      protocol: TCP
      port: 4000
      targetPort: 4000
