infra/k8s/user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: sentrionic/user-service
---
apiVersion: v1
kind: Service
metadata:
  name: user-srv
spec:
  selector:
    app: user-service
  ports:
    - name: user-service
      protocol: TCP
      port: 4000
      targetPort: 4000
