infra/k8s/web-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: sentrionic/signal-web
---
apiVersion: v1
kind: Service
metadata:
  name: web-srv
spec:
  selector:
    app: web
  ports:
    - name: web
      protocol: TCP
      port: 4000
      targetPort: 4000
