infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/websocket-services: notification-srv
    nginx.org/websocket-services: notification-srv
spec:
  rules:
    - host: signal.io
      http:
        paths:
          - path: /api/(accounts|requests|friends)/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-srv
                port:
                  number: 4000
          - path: /api/(groups|chats|messages)/?(.*)
            pathType: Prefix
            backend:
              service:
                name: chat-srv
                port:
                  number: 4000
          - path: /(ws|socket.io)/?(.*)
            pathType: Prefix
            backend:
              service:
                name: notification-srv
                port:
                  number: 4000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: web-srv
                port:
                  number: 4000
